--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@
 
 [build]
   publish = "dist"
-  command = "npm run build"
+  command = "npx playwright install-deps && npm run build"
 
 [[redirects]]
   from = "/*"
